backend/queue-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: queue
  labels:
    app: queue
spec:
  containers:
    - image: stelioszlat/queue:1.0.0
      name: queue
      ports:
      - containerPort: 15672
        protocol: TCP
      - containerPort: 5671
        protocol: TCP
      - containerPort: 5672
        protocol: TCP
      - containerPort: 4369
        protocol: TCP
