backend/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8060
  selector:
    app: auth
